--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "test": "mocha --use_strict src/**/*.test.js",
     "test_lib": "mocha --use_strict lib/*.test.js",
     "coverage": "istanbul cover _mocha -- -R spec src/**/*.test.js",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "build": "npm run build_lib && npm run build_browser",
+    "coveralls": "yarn coverage && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "build": "yarn build_lib && yarn build_browser",
     "build_lib": "rm -fr lib/* && babel --copy-files src --out-dir lib",
     "build_browser": "mkdir -p lib && browserify -o lib/eos-api.js -s EosApi lib/index.js",
-    "build_browser_test": "npm run build && browserify -o dist/test.js lib/*.test.js",
+    "build_browser_test": "yarn build && browserify -o dist/test.js lib/*.test.js",
     "minimize": "uglifyjs lib/eos-api.js -o lib/eos-api.min.js --source-map --compress --mangle",
     "helperDocs": "jsdoc2md src/exported-helpers.js src/process-args.js > docs/index.md",
     "apiDocs": "./bin/api-docs.js > lib/api-jsdocs.js && jsdoc2md lib/api-jsdocs.js > docs/api.md",
-    "docs": "npm run apiDocs && npm run helperDocs",
+    "docs": "yarn apiDocs && yarn helperDocs",
     "srisum": "npx srisum lib/eos-api.*",
-    "prepublishOnly": "npm run build && npm run test_lib && npm run minimize && npm run docs && npm run srisum"
+    "prepublishOnly": "yarn build && yarn test_lib && yarn minimize && yarn docs && yarn srisum"
   },
   "repository": {
     "type": "git",
@@ -45,15 +45,18 @@
     "babel-preset-es2015": "6.24.1",
     "bluebird": "3.5.0",
     "browserify": "16.2.2",
-    "uglify-js": "3.4.5",
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
-    "jsdoc-to-markdown": "^4.0.1",
-    "mocha": "^5.2.0"
+    "jsdoc-to-markdown": "^5.0.3",
+    "mocha": "^5.2.0",
+    "uglify-js": "3.4.5"
   },
   "dependencies": {
-    "camel-case": "^3.0.0",
-    "isomorphic-fetch": "^2.2.1"
+    "camel-case": "3.0.0",
+    "isomorphic-fetch": "2.2.1"
+  },
+  "resolutions": {
+    "braces": "^2.3.1"
   },
   "babel": {
     "presets": [
